Fix merge conflicts for C-Help